k3s/apps/bitcomet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcomet
  namespace: downloads
  labels:
    app: bitcomet
spec:
  replicas: 0
  paused: true
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bitcomet
  template:
    metadata:
      labels:
        app: bitcomet
    spec:
      containers:
        - name: bitcomet
          image: wxhere/bitcomet-webui:v2.21.2
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 6882
              name: bt-tcp
              protocol: TCP
            - containerPort: 6882
              name: bt-udp
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /root/.config/BitComet
            - name: downloads
              mountPath: /root/Downloads
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1536Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bitcomet-config
        - name: downloads
          persistentVolumeClaim:
            claimName: bitcomet-downloads
