k3s/apps/bitcomet/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bitcomet
  namespace: dashboard-network
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bitcomet.home.ijlalahmad.dev`)
      kind: Rule
      services:
        - name: bitcomet
          port: 8700
